--- a/style.css
+++ b/style.css
@@ -125,7 +125,7 @@ height: 50px;    display: flex;
     .flex  svg{display:block;
           position:relative;
           margin-top:  -19px;
-          margin-left:  145%;
+          margin-left:  20%;
           width: 42px;
     }
   
@@ -146,7 +146,7 @@ height: 50px;    display: flex;
     font-size: 50px;
     color: white;
     display: block;
-    height: 90px;
+    height: 249px;
 }
 
 .flex{
@@ -162,7 +162,10 @@ height: 50px;    display: flex;
     padding: 42px 10px;
     height: 45px;
     color: gray;
+    margin-top:15px;
     display: block;
+    background-color:whitesmoke;
+    
 }
 .flexible{
     display: flex;
@@ -184,8 +187,8 @@ height: 50px;    display: flex;
  .rigidX img{
      margin-top: 55px;
     height: 400px;
-    width: 400px;
-    padding: 12px 8%;
+    width: 90%;
+    margin-left:7%;
 }
 .rigidX{
     display: block;
@@ -200,23 +203,27 @@ height: 50px;    display: flex;
 .sophia{
     background-color: grey; 
     display: block;
-    height: 750px;
+    height: 950px;
     position: absolute;
     width: 100%;
-
+   word-wrap:break-word;
     color: whitesmoke;
 }
 .sophia h1{
 font-size: 40px;
-width: 80%;
+width: 100%;
 height: 180px;
 padding-left: 22px;
+background-color:black;
 }
 .sophia p{
     width: 60%;
     margin-left: 24px;
     color: #d1e1e1;
 }
+.crest{
+height:300px;
+background-color:black;}
 .alia-flex{display: none;}
 .flex-conten button{
     border: none;
@@ -228,6 +235,7 @@ padding-left: 22px;
     margin-left: 34px;
 }
 .foot{
+
     height: 60px;
     background-color:rgb(22, 21, 21);
     display: flex;
@@ -243,6 +251,10 @@ padding-left: 22px;
           width: 42px;
 }
 .ham{display: none;}
+.box{
+ margin-left:140%;
+ width:16px;
+ }
 .box:hover .ham{
     display: block;
     background-color:rgb(22, 21, 21);
@@ -260,5 +272,15 @@ padding-left: 22px;
 }
 #wed{
     display: none;
+}
+.subwordsmobile{
+    padding: 42px 10px;
+    height: 45px;
+    color: gray;
+    margin-top:105px;
+    display: block;
+}
+.box svg{
+margin-left:100%;
 }
 }
